UI update + new tests